20061202 man/fuse.1: add some more TS2068 stuff (Fred).
20061213 ui/xlib/xdisplay.c: fix compilation.
20061215 debugger/breakpoint.c: fix segfault on "clear" command (thanks,
	 Stuart Brady)
20061217 machine.c: load rom into correct memory bank (fixes If1 ROM paging)
         (Fred).
20061217 menu.c,rzx.[ch]: reset rzx_instructions_offset on rollback to fix
	 replay of rolled back recordings (and some refactoring).
20061222 sound/sdlsound.c: clear sound fifo before closing (Fred).
20061222 Makefile.am,configure.in,sound/{Makefile.am,coreaudiosound.c,
         lowlevel.h,sfifo.c},timer.c: add CoreAudio sound driver for Mac OS X
         (Fred).
20061223 configure.in: fix CoreAudio comment (Fred).
20061223 configure.in: fix typo in above! (Fred).
20070101 menu_data.c,ui.c,man/fuse.1: change capitalisation of
	 "Insert snapshot" command and document rollback commands.
20070106 tape.c: support "no edge", "level low" and "level high" from
	 tape edges.
20070111 tape.c: display vaguely useful information in the tape browser for
	 generalised data blocks.
20070113 ChangeLog: bring up to date.
20070115 fuse.[ch],machine.c,sound.[ch],tape.c: make the sound lifecycle be
         treated more like the uidisplay - initialised and ended based on machine
         lifecycle (fixes bug #1582087) (Fred).
20070115 ChangeLog: add reference to new CoreAudio sound driver (Fred).
20070117 fuse.c, if1.[ch]: free memory on exit. Use C89-style struct
	 initialisation (patch #1637020) (Gergely Szasz).
20070120 if1.c: reduce magic number count.
20070122 display.c: inline get_beam_position and display_dirty_chunk for more
         speed (Fred).
20070128 settings.dat,ui/options.dat,ui/gtk/gtkdisplay.c,ui/sdl/sdldisplay.c,
         ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c}: add new PAL TV
         scalers that attempt to reproduce TV-esque colur reproduction (patch
         #1537920) (Gergely Szasz).
20070128 ChangeLog,man/fuse.1: add information about PAL scalers (Fred).